# prefscript

./: .gitignore  .gitmodules  README.md  ap.txt  doc.md  parser_prag.py  prag_re.txt  pragmas.txt  pyproject.toml  t.txt
docs/: 00_v2plans_ex_25.prfs  01_v2plans.txt  02_first_v2lark.txt  doc.md
examples/: about.txt  exp_ppr.prfs  fact_01_primrec.prfs  is_pyth_02.prfs  leap_year.txt  script_proj.prfs
examples/tests/: e03.prfs  e05.prfs  e06.prfs  e07.prfs  e08.prfs  proj_repeat_test.prfs
old/: about_cp.txt  fib_00_primrec_obsolete.prfs  fundata.py  parser_prag.py  prag_re.txt  towards_ascii_output.py  uses_prefscript.py
scaff/: pragmas.txt
scripts/: add3.prfs  bool.prfs  e00.prfs  e01.prfs  e04.prfs  fact_00.prfs  fact_01_primrec.prfs  fib_00_primrec.prfs  hw.prfs  is_pyth_01.prfs  is_pyth_02.prfs  leap_year.txt  proj_CHECK.prfs  script_compar.prfs  script_division.prfs  script_proj.prfs  sign.prfs
scripts/earliest/: script000.prf  script002.prf
scripts/for_v1_1/: add3reord.prfs  exp.prfs  fact_00.prfs  hw.prfs
scripts/for_v1_2/: exp_woppr.prfs  exp_wppr.prfs
scripts/messidor2024/: CAREFUL.txt
scripts/tests-1.0/: e02.prfs  (+1 more)
scripts_v1/: exp_primrec.prfs  exp_wppr.prfs  fact_00_remove.prfs  fact_01_primrec.prfs  fib_00_primrec.prfs  is_pyth_03_no_main.prfs  script_sign.prfs  test.py  test_fact.py
src/: ascii7io.py  fundata.py  is_pyth_00.prfs  jutge_plans.txt  parser.py  prefscript.py  prefscript_bis.py  prfs_plus.py  script000.prfs  script001.prfs  script002.prf  test.py  todo.txt  towards_prim_rec.py  uses_prefscript.py  v1parser.py
tests/: test.py
(+13 files in other folders)
