[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prefscript"
version = "0.3"
authors = [ { name = "José Luis Balcázar", email = "jose.luis.balcazar@upc.edu" }, ]
description = "(Towards a) Partial Recursive Functions lab"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]


[project.urls]
"Homepage" = "https://github.com/balqui/prefscript"
"Bug Tracker" = "https://github.com/balqui/prefscript/issues"
